WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
230210
CRABS playback stops although the progress bar moves
https://bugs.webkit.org/show_bug.cgi?id=230210
Summary
CRABS playback stops although the progress bar moves
Jean-Yves Avenard [:jya]
Reported
2021-09-13 00:44:19 PDT
Under some circumstances, when playback stops due to stalling the progress bar continues to move.
Attachments
Patch
(5.08 KB, patch)
2021-09-13 04:15 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2021-09-13 00:44:32 PDT
rdar://81123838
Jean-Yves Avenard [:jya]
Comment 2
2021-09-13 04:15:26 PDT
Created
attachment 438027
[details]
Patch
EWS
Comment 3
2021-09-13 18:17:32 PDT
Committed
r282374
(
241636@main
): <
https://commits.webkit.org/241636@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438027
[details]
.
WebKit Commit Bot
Comment 4
2022-01-25 07:56:40 PST
Re-opened since this is blocked by
bug 235587
Jean-Yves Avenard [:jya]
Comment 5
2022-11-30 22:29:26 PST
***
Bug 248585
has been marked as a duplicate of this bug. ***
Jean-Yves Avenard [:jya]
Comment 6
2022-12-02 15:22:38 PST
This can be reproduced with playing:
https://mediaserver.avenard.org/test/89041245.py?name=foo&stallOffset=100000&stallDuration=600&chunkSize=1024
press play and notice that currentTime progress even though playback doesn't start.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug